fix modal z-index

--- a/src/App.css
+++ b/src/App.css
@@ -132,10 +132,6 @@ img {
 }
 
 #netlify-identity-widget{
-  position: absolute;
-  top: 20% !important;
-  left: 10% !important;
-  width: 80% !important;
-  height: 65% !important;
-  overflow: auto !important;
+  z-index: 999 !important;
+
 }
